--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "dependencies": {
         "axios": "^0.16.2",
         "chai": "^4.0.2",
-        "electron": "^1.8.2",
+        "electron": "^1.8.6",
         "express": "^4.15.3",
+        "hoek": "^5.0.3",
         "mocha": "^3.2.0",
         "nightmare": "^2.10.0",
         "node-static": "^0.7.9",
